# psp2spl

./: CMakeLists.txt  LICENSE.txt  README.md  main.c  psp2spl.yml
cp_payload/: main.c
framework/: main.c
samples/pspemu_brom_exec/: CMakeLists.txt  kplugin.skprx  kplugin.yml  main.c  notes.md
samples/pspemu_brom_exec/bridge/: Makefile  bridge.h
samples/pspemu_qa_devkit_patch/: CMakeLists.txt  kplugin.skprx  kplugin.yml  main.c
samples/pspemu_qa_devkit_patch/payload/: main.c
